// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: BookingForm Renders without exploding in English 1`] = `
<form
  class="jsx-1188712385"
>
  <div
    class="jsx-894113413 firstName"
  >
    <label
      class="jsx-894113413"
      for="firstName"
    >
      First Name
    </label>
    <input
      class="jsx-894113413"
      name="firstName"
      type="text"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 lastName"
  >
    <label
      class="jsx-894113413"
      for="lastName"
    >
      Last Name
    </label>
    <input
      class="jsx-894113413"
      name="lastName"
      type="text"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 email"
  >
    <label
      class="jsx-894113413"
      for="email"
    >
      Email
    </label>
    <input
      class="jsx-894113413"
      name="email"
      type="email"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 phone"
  >
    <label
      class="jsx-894113413"
      for="phone"
    >
      Phone
    </label>
    <input
      class="jsx-894113413"
      name="phone"
      type="tel"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 message"
  >
    <label
      class="jsx-894113413"
      for="message"
    >
      Short Message
    </label>
    <input
      class="jsx-894113413"
      name="message"
      type="text"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-4021739229 button"
  >
    <button
      class="jsx-4021739229"
      type="submit"
    >
      Book Now!
    </button>
  </div>
</form>
`;

exports[`Component: BookingForm Renders without exploding in Russian 1`] = `
<form
  class="jsx-1188712385"
>
  <div
    class="jsx-894113413 firstName"
  >
    <label
      class="jsx-894113413"
      for="firstName"
    >
      Имя
    </label>
    <input
      class="jsx-894113413"
      name="firstName"
      type="text"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 lastName"
  >
    <label
      class="jsx-894113413"
      for="lastName"
    >
      Фамилия
    </label>
    <input
      class="jsx-894113413"
      name="lastName"
      type="text"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 email"
  >
    <label
      class="jsx-894113413"
      for="email"
    >
      Электронный адрес
    </label>
    <input
      class="jsx-894113413"
      name="email"
      type="email"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 phone"
  >
    <label
      class="jsx-894113413"
      for="phone"
    >
      Телефон
    </label>
    <input
      class="jsx-894113413"
      name="phone"
      type="tel"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-894113413 message"
  >
    <label
      class="jsx-894113413"
      for="message"
    >
      Сообщение
    </label>
    <input
      class="jsx-894113413"
      name="message"
      type="text"
      value=""
    />
    <span
      class="jsx-894113413 errors"
    />
  </div>
  <div
    class="jsx-4021739229 button"
  >
    <button
      class="jsx-4021739229"
      type="submit"
    >
      Забронировать сейчас!
    </button>
  </div>
</form>
`;
